# rust-arbitrage-core

./: README.md  docker-compose.yml
backend/bot/: .gitignore  Cargo.toml  Dockerfile
backend/bot/.sqlx/: query-029727196ff7e62cd8080d01aa96a336ce42c3cff69763368c88039ac402ccb8.json  query-071b5696cf023de177827cb662010db5bd53bc6fcbb073cc0ef34ad46e379768.json  query-44a9cf917008611d8d597730dfd257db7dc6154b22661df2878cbc644927ad82.json  query-8411f5834885ef76b5759ead9a1921a3b32e74d86bf3313a19e3b52c58aa5265.json  query-f9c23ab77d4d28948b73333d71c010a4c3d2534bce1c7dea49645bdbd2bc67f4.json
backend/bot/src/: main.rs
backend/core/: .gitignore  Cargo.toml  Dockerfile
backend/core/.sqlx/: query-12095f1fa908969e211cb47e0d0bf1857b12aa14895bec8b8cccaeda45fe9039.json  query-1499674eac700d43a77721d5b11d359e69ab12c4ec170237401fa3e7e73ee2fc.json  query-2dc08f1bd4ad7fc67d60236fc13490c46daf5d5f01075a7c840269945fe87b71.json  query-33c74c1e21b35e21c2ff3bd0ca50e7d26b8f040d82d6bfd89d6d1960df74c55e.json  query-4d105468003a1d0840952de71ef398432c1087f00112ec42ab79e71a88b88775.json  query-4d5b3b601af34d144c91b306391448262fbe277a43b88597bf69b84a0473c790.json  query-577e92a27d127417ff28a303f5e6a15a6de046841c1a94ef6e191b1723debb2c.json  query-588a479183c769f6f864d89b7a24e6b5bc147479a17a462c8d02463e916e0a22.json  query-62a4084d627c25600119d25881e261ee2e1ad3ad0ef1040b1e7ca2a5a5c30a42.json  query-6f9d5d81ad0f0723e96f7c069cb64c7c52c76900190cb6b85eb1badc44526acc.json  query-735689d567f759d68481a652b6cdb72ff4220acf49b34bd2031a190cc763dde2.json  query-7a63ab70b088520ec439f26d680dcb2cd2ce2e9b94e9a04379cad9c7d4196d65.json  query-84b0a75e15199c161cf1c6cfb577100b96cd9eaacd2eaa53c49b6eae83376ad5.json  query-882a4b65159ddd9aa6c2ebf1bf773ceae31eacd5968ec382411bff1c9b646fc3.json  query-8b9cafccfffd78ef491ccb62d817429775a7125cfbc1acb44c731ed83a84faea.json  query-93c908496358fc4dbf864a5d9082d775c7a2bef40168a3480b5786a768effcb4.json  query-97b4d0578a352aba2ee1bfb856b68aa47bc9e12c6fd769dd31f4a3b37f3cbf84.json  (+8 more)
backend/core/src/: auth.rs  db.rs  (+4 more)
(+69 files in other folders)
