[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram bot
teloxide = { version = "0.12", features = ["macros", "auto-send"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# ENV
dotenv = "0.15"

# Logging
pretty_env_logger = "0.5"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }