[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid" ] }
tokio = { version = "1.0", features = ["full"] }
google-jwt-verify = "0.2"