[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }


dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
bcrypt = "0.19.0"
validator = { version = "0.20.0", features = ["derive"] }
